Update JoinPointDetail.java